fix code review